[package]
name = "btc-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
bs58 = "0.5"
bech32 = "0.9"
byteorder = "1.5"

axum = "0.7"
tokio = { version = "1", features = ["full"] }


tower-http = { version = "0.5", features = ["fs"] }

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "web"
path = "src/bin/web.rs"